syntax = "proto3";

option go_package = "proto";

message WatchTransactionRequest {
    string quoteId = 1;
    string txHash = 2;
}

message WatchTransactionResponse {
    string quoteId = 1;
    string txHash = 2;
    bool isPending = 3;
}

service Watcher {
    rpc WatchTransaction(WatchTransactionRequest) returns (WatchTransactionResponse);
}
